--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/serve": "^2.9.2",
     "cva": "^1.0.0-beta.1",
     "framer-motion": "^11.2.4",
+    "hotkeys-js": "^3.13.7",
     "isbot": "^4.1.0",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
