--- a/package.json
+++ b/package.json
@@ -8,30 +8,44 @@
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:migrate": "prisma migrate dev --name ",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:push": "prisma db push --skip-generate",
+    "db:reset": "prisma migrate reset",
+    "postinstall": "bun run db:generate"
   },
   "dependencies": {
     "@curiousleaf/utils": "^1.0.27",
+    "@epic-web/remember": "^1.0.2",
+    "@hookform/resolvers": "^3.4.2",
+    "@prisma/client": "^5.14.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "@sindresorhus/slugify": "^2.2.1",
+    "@tanstack/react-table": "^8.17.3",
     "cva": "^1.0.0-beta.1",
-    "framer-motion": "^11.2.4",
     "hotkeys-js": "^3.13.7",
     "isbot": "^4.1.0",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-topbar-progress-indicator": "^4.1.1",
+    "remix-hook-form": "^4.3.1",
     "remix-utils": "^7.6.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
-    "@stylistic/eslint-plugin": "^2.1.0",
     "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
