switch to coming soon on homepage

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@curiousleaf/utils": "^1.0.27",
     "@epic-web/remember": "^1.0.2",
     "@hookform/resolvers": "^3.4.2",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
@@ -32,6 +32,7 @@
     "@sindresorhus/slugify": "^2.2.1",
     "cva": "^1.0.0-beta.1",
     "embla-carousel-react": "^8.1.5",
+    "got": "^14.4.1",
     "hotkeys-js": "^3.13.7",
     "isbot": "^4.1.0",
     "lucide-react": "^0.378.0",
@@ -60,7 +61,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prisma": "^5.14.0",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
