--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "db:migrate": "prisma migrate dev --name ",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push --skip-generate",
-    "db:reset": "prisma migrate reset",
+    "db:seed": "prisma db seed",
+    "db:reset": "prisma migrate reset --skip-seed && prisma db push --skip-generate && prisma db seed",
     "postinstall": "bun run db:generate"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.31",
     "@curiousleaf/utils": "^1.0.27",
     "@epic-web/remember": "^1.0.2",
     "@hookform/resolvers": "^3.4.2",
@@ -30,24 +35,29 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@sindresorhus/slugify": "^2.2.1",
+    "ai": "^3.2.0",
     "cva": "^1.0.0-beta.1",
     "embla-carousel-react": "^8.1.5",
     "got": "^14.4.1",
+    "he": "^1.2.0",
     "hotkeys-js": "^3.13.7",
     "isbot": "^4.1.0",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
+    "node-html-parser": "^6.1.13",
     "plur": "^5.1.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "remix-hook-form": "^4.3.1",
     "remix-utils": "^7.6.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/he": "^1.2.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -65,6 +75,7 @@
     "prisma": "^5.15.1",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.15.6",
     "typescript": "^5.4.5",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
