--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@epic-web/remember": "^1.0.2",
     "@hookform/resolvers": "^3.4.2",
     "@prisma/client": "^5.15.1",
-    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -35,6 +34,9 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@sindresorhus/slugify": "^2.2.1",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "ai": "^3.2.0",
     "cva": "^1.0.0-beta.1",
     "embla-carousel-react": "^8.1.5",
@@ -48,7 +50,7 @@
     "plur": "^5.1.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "remix-hook-form": "^4.3.1",
+    "remix-hook-form": "^5.0.1",
     "remix-utils": "^7.6.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
