fix view transitions and clean up tool edit page

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@epic-web/remember": "^1.0.2",
     "@hookform/resolvers": "^3.4.2",
     "@prisma/client": "^5.15.1",
-    "@radix-ui/react-dialog": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -39,7 +39,6 @@
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "ai": "^3.2.0",
-    "cmdk": "^1.0.0",
     "cva": "^1.0.0-beta.1",
     "embla-carousel-react": "^8.1.5",
     "got": "^14.4.1",
