--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
+    "lint": "bun biome lint --apply .",
+    "check": "bun biome check --apply .",
+    "format": "bun biome format --organize-imports-enabled --write .",
     "typecheck": "tsc",
-    "db:generate": "prisma generate",
+    "db:generate": "prisma generate --no-hints",
     "db:studio": "prisma studio",
-    "db:migrate": "prisma migrate dev --name ",
-    "db:migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push --skip-generate",
     "db:seed": "prisma db seed",
     "db:reset": "prisma migrate reset --skip-seed && prisma db push --skip-generate && prisma db seed",
@@ -22,65 +21,64 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.31",
-    "@curiousleaf/utils": "^1.0.27",
-    "@epic-web/remember": "^1.0.2",
-    "@hookform/resolvers": "^3.4.2",
-    "@prisma/client": "^5.15.1",
-    "@radix-ui/react-checkbox": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
+    "@ai-sdk/openai": "^0.0.61",
+    "@curiousleaf/utils": "^1.0.29",
+    "@epic-web/remember": "^1.1.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@langchain/core": "^0.3.3",
+    "@langchain/openai": "^0.3.0",
+    "@mendable/firecrawl-js": "^1.4.5",
+    "@prisma/client": "^5.19.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@remix-run/node": "^2.12.1",
+    "@remix-run/react": "^2.12.1",
+    "@remix-run/serve": "^2.12.1",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tiptap/pm": "^2.4.0",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
-    "ai": "^3.2.0",
+    "@tiptap/pm": "^2.7.2",
+    "@tiptap/react": "^2.7.2",
+    "@tiptap/starter-kit": "^2.7.2",
+    "ai": "^3.4.0",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0-rc.12",
     "cva": "^1.0.0-beta.1",
-    "embla-carousel-react": "^8.1.5",
-    "got": "^14.4.1",
+    "embla-carousel-react": "^8.3.0",
+    "got": "^14.4.2",
     "he": "^1.2.0",
     "hotkeys-js": "^3.13.7",
-    "isbot": "^4.1.0",
-    "lucide-react": "^0.378.0",
+    "isbot": "^5.1.17",
+    "langchain": "^0.3.2",
+    "lucide-react": "v0.445.0",
     "next-themes": "^0.3.0",
     "node-html-parser": "^6.1.13",
     "plur": "^5.1.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "remix-hook-form": "^5.0.1",
-    "remix-utils": "^7.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "remix-hook-form": "^5.0.4",
+    "remix-utils": "^7.7.0",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.9.2",
-    "@tailwindcss/typography": "^0.5.13",
+    "@biomejs/biome": "^1.9.2",
+    "@remix-run/dev": "^2.12.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/he": "^1.2.3",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@vercel/remix": "^2.9.2-patch.2",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "prisma": "^5.15.1",
-    "tailwindcss": "^3.4.3",
+    "@vercel/remix": "^2.12.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "prisma": "^5.19.1",
+    "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.15.6",
-    "typescript": "^5.4.5",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.7",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
