--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hotkeys-js": "^3.13.7",
     "lucide-react": "v0.445.0",
     "next": "14.2.13",
+    "nuqs": "^1.19.3",
     "plur": "^5.1.0",
     "react": "^18",
     "react-dom": "^18",
