--- a/package.json
+++ b/package.json
@@ -12,17 +12,13 @@
     "db:generate": "prisma generate --no-hints",
     "db:studio": "prisma studio",
     "db:push": "prisma db push --skip-generate",
-    "db:seed": "prisma db seed",
-    "db:reset": "prisma migrate reset --skip-seed && prisma db push --skip-generate && prisma db seed",
+    "db:reset": "prisma migrate reset --skip-seed && prisma db push --skip-generate",
     "postinstall": "bun run db:generate"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  },
   "dependencies": {
-    "@curiousleaf/utils": "^1.0.31",
+    "@curiousleaf/utils": "^1.0.36",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -49,7 +45,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
