--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "cva": "^1.0.0-beta.1",
     "embla-carousel-react": "^8.3.0",
     "hotkeys-js": "^3.13.7",
@@ -34,6 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "rss": "^1.2.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
@@ -44,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/rss": "^0.0.32",
     "postcss": "^8",
     "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
