--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "prisma studio",
     "db:push": "prisma db push --skip-generate",
     "db:reset": "prisma migrate reset --skip-seed && prisma db push --skip-generate",
+    "postbuild": "next-sitemap --config sitemap.config.mjs",
     "postinstall": "bun run db:generate"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.11.1",
@@ -30,10 +32,12 @@
     "hotkeys-js": "^3.13.7",
     "lucide-react": "v0.445.0",
     "next": "14.2.13",
+    "next-sitemap": "^4.2.3",
     "nuqs": "^1.19.3",
     "plur": "^5.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
     "rss": "^1.2.2",
     "sonner": "^1.5.0",
