--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,8 @@
     "allowUmdGlobalAccess": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "paths": {
-      "~/*": ["./*"]
-    }
+    "plugins": [{ "name": "next" }],
+    "paths": { "~/*": ["./*"] }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
