--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "@curiousleaf/utils": "^1.0.36",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.20.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.11.1",
     "cva": "^1.0.0-beta.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
+    "geist": "^1.3.1",
     "hotkeys-js": "^3.13.7",
     "lucide-react": "v0.445.0",
-    "next": "14.2.13",
+    "next": "14.2.14",
     "next-sitemap": "^4.2.3",
     "nuqs": "^1.19.3",
     "plur": "^5.1.0",
@@ -44,7 +46,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.2",
+    "@biomejs/biome": "^1.9.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -52,7 +54,7 @@
     "@types/rss": "^0.0.32",
     "postcss": "^8",
     "prisma": "^5.20.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
