--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "cva": "^1.0.0-beta.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.0",
     "geist": "^1.3.1",
     "hotkeys-js": "^3.13.7",
     "lucide-react": "v0.445.0",
+    "motion-number": "^0.1.7",
     "next": "14.2.14",
     "next-sitemap": "^4.2.3",
     "nuqs": "^1.19.3",
