--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "email": "cp .env ./node_modules/react-email/dist/preview && email dev",
     "dev": "next dev -p 5175 --turbo",
     "start": "next start -p 5175",
     "build": "next build",
@@ -25,6 +26,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-email/components": "0.0.25",
     "@t3-oss/env-nextjs": "^0.11.1",
     "cva": "^1.0.0-beta.1",
     "date-fns": "^4.1.0",
@@ -42,8 +44,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
+    "resend": "^4.0.0",
     "rss": "^1.2.2",
     "sonner": "^1.5.0",
+    "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
@@ -56,6 +60,7 @@
     "@types/rss": "^0.0.32",
     "postcss": "^8",
     "prisma": "^5.20.0",
+    "react-email": "^3.0.1",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
