update stripe functionality flow and clean up components

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ PLAUSIBLE_API_KEY=""
 # PostHog
 NEXT_PUBLIC_POSTHOG_HOST="https://us.posthog.com"
 NEXT_PUBLIC_POSTHOG_API_KEY=""
+
+# Stripe
+STRIPE_SECRET_KEY="sk_xyz"
+STRIPE_WEBHOOK_SECRET="whsec_xyz"
+STRIPE_PRODUCT_IDS="prod_xyz"
