--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "postinstall": "bun run db:generate"
   },
   "dependencies": {
+    "@aws-sdk/client-sesv2": "^3.670.0",
     "@curiousleaf/utils": "^1.0.36",
     "@hookform/resolvers": "^3.9.0",
+    "@number-flow/react": "^0.1.3",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -31,15 +33,13 @@
     "cva": "^1.0.0-beta.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^11.11.0",
     "hotkeys-js": "^3.13.7",
     "lucide-react": "v0.445.0",
-    "motion-number": "^0.1.7",
-    "next": "14.2.14",
+    "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
-    "nuqs": "^1.19.3",
+    "nuqs": "^1.20.0",
     "plur": "^5.1.0",
-    "posthog-js": "^1.166.1",
+    "posthog-js": "^1.167.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
@@ -47,9 +47,11 @@
     "resend": "^4.0.0",
     "rss": "^1.2.2",
     "sonner": "^1.5.0",
-    "stripe": "^17.1.0",
-    "tailwind-merge": "^2.5.2",
-    "zod": "^3.23.8"
+    "stripe": "^17.2.0",
+    "tailwind-merge": "^2.5.3",
+    "zod": "^3.23.8",
+    "zsa": "^0.6.0",
+    "zsa-react": "^0.2.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
