--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "postinstall": "bun run db:generate"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.51",
+    "@ai-sdk/openai": "^0.0.66",
+    "@aws-sdk/client-s3": "^3.670.0",
     "@aws-sdk/client-sesv2": "^3.670.0",
+    "@aws-sdk/lib-storage": "^3.670.0",
     "@curiousleaf/utils": "^1.0.36",
     "@hookform/resolvers": "^3.9.0",
+    "@mendable/firecrawl-js": "^1.6.1",
     "@number-flow/react": "^0.1.3",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -30,10 +35,12 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-email/components": "0.0.25",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "ai": "^3.4.10",
     "cva": "^1.0.0-beta.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "hotkeys-js": "^3.13.7",
+    "inngest": "^3.22.13",
     "lucide-react": "v0.445.0",
     "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
