--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "embla-carousel-react": "^8.3.0",
     "hotkeys-js": "^3.13.7",
     "inngest": "^3.22.13",
-    "ky": "^0.33.0",
+    "ky": "^1.7.2",
     "lucide-react": "v0.445.0",
     "next": "^14.2.15",
     "next-auth": "5.0.0-beta.18",
+    "next-plausible": "^3.12.2",
     "next-sitemap": "^4.2.3",
     "nuqs": "^1.20.0",
     "plur": "^5.1.0",
