update next packages and switch to anync apis

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "email": "cp .env ./node_modules/react-email/dist/preview && email dev",
-    "dev": "next dev -p 5175 --turbo",
+    "dev": "next dev --turbopack -p 5175",
     "start": "next start -p 5175",
     "build": "next build",
     "lint": "bun biome lint --apply .",
@@ -20,12 +20,12 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.51",
     "@ai-sdk/openai": "^0.0.66",
-    "@aws-sdk/client-s3": "^3.675.0",
-    "@aws-sdk/lib-storage": "^3.675.0",
+    "@aws-sdk/client-s3": "^3.677.0",
+    "@aws-sdk/lib-storage": "^3.677.0",
     "@curiousleaf/utils": "^1.0.37",
     "@hookform/resolvers": "^3.9.0",
     "@mendable/firecrawl-js": "^1.6.1",
-    "@number-flow/react": "^0.2.3",
+    "@number-flow/react": "^0.2.5",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -45,7 +45,7 @@
     "@react-email/components": "0.0.25",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-table": "^8.20.5",
-    "ai": "^3.4.16",
+    "ai": "^3.4.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -53,19 +53,19 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "hotkeys-js": "^3.13.7",
-    "inngest": "^3.22.13",
+    "inngest": "^3.23.1",
     "ky": "^1.7.2",
     "lucide-react": "^0.453.0",
-    "next": "^14.2.15",
+    "next": "15.0.1",
     "next-auth": "5.0.0-beta.18",
     "next-plausible": "^3.12.2",
     "next-sitemap": "^4.2.3",
-    "nuqs": "^1.20.0",
+    "nuqs": "^2.0.3",
     "plur": "^5.1.0",
-    "posthog-js": "^1.174.2",
-    "react": "^18",
+    "posthog-js": "^1.174.3",
+    "react": "19.0.0-rc-69d4b800-20241021",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.4",
@@ -83,8 +83,8 @@
     "@biomejs/biome": "^1.9.4",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/rss": "^0.0.32",
     "postcss": "^8",
     "prisma": "^5.21.1",
@@ -92,5 +92,9 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
